# llm-rag-prj

tdRAG/: roy_test.py
tdRAG/-강의자료-테디노트의rag비법노트/03- 주주총회 자료/2024년-11월 주주총회/: .env  00-Upstage-Parser.ipynb  01-Developing-Modules.ipynb  02-Make-IT-SubGraph.ipynb  03-Add-Module-in-the-middle.ipynb  pyproject.toml
tdRAG/-강의자료-테디노트의rag비법노트/03- 주주총회 자료/2024년-11월 주주총회/data/: argus-bitumen.html  argus-bitumen.md  argus-bitumen_0000_0020.json
tdRAG/-강의자료-테디노트의rag비법노트/03- 주주총회 자료/2024년-11월 주주총회/data/tables/: ARGUS-BITUMEN_TABLE_Page_0_Index_10.csv  ARGUS-BITUMEN_TABLE_Page_0_Index_14.csv  ARGUS-BITUMEN_TABLE_Page_11_Index_244.csv  ARGUS-BITUMEN_TABLE_Page_11_Index_248.csv  ARGUS-BITUMEN_TABLE_Page_12_Index_263.csv  ARGUS-BITUMEN_TABLE_Page_13_Index_289.csv  ARGUS-BITUMEN_TABLE_Page_13_Index_290.csv  ARGUS-BITUMEN_TABLE_Page_14_Index_301.csv  ARGUS-BITUMEN_TABLE_Page_15_Index_337.csv  ARGUS-BITUMEN_TABLE_Page_15_Index_339.csv  ARGUS-BITUMEN_TABLE_Page_16_Index_349.csv  ARGUS-BITUMEN_TABLE_Page_1_Index_26.csv  ARGUS-BITUMEN_TABLE_Page_1_Index_29.csv  ARGUS-BITUMEN_TABLE_Page_20_Index_438.csv  ARGUS-BITUMEN_TABLE_Page_2_Index_47.csv  ARGUS-BITUMEN_TABLE_Page_2_Index_51.csv  ARGUS-BITUMEN_TABLE_Page_2_Index_52.csv  ARGUS-BITUMEN_TABLE_Page_5_Index_122.csv  ARGUS-BITUMEN_TABLE_Page_5_Index_124.csv  ARGUS-BITUMEN_TABLE_Page_5_Index_126.csv  ARGUS-BITUMEN_TABLE_Page_5_Index_127.csv  ARGUS-BITUMEN_TABLE_Page_8_Index_187.csv  ARGUS-BITUMEN_TABLE_Page_8_Index_188.csv
tdRAG/-강의자료-테디노트의rag비법노트/03- 주주총회 자료/2024년-11월 주주총회/layoutparse/: preprocessing.py  teddynote_parser.py
(+2 files in other folders)
